Fixing name sizing on mobile/tablet views

--- a/css/custom.css
+++ b/css/custom.css
@@ -419,7 +419,7 @@ footer {
 	}
 
 	.name {
-		font-size: 2.3em;
+		font-size: 3em;
 	}
 
 	.verticalcenter {
